[package]
name = "someren-project-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.3.1", package = "libadwaita", features = ["v1_2"] }
gtk = { version = "0.6.4", package = "gtk4", features = ["v4_10"] }
